<!--
  ~ Copyright (c) 2016 CA. All rights reserved.
  ~
  ~ This software may be modified and distributed under the terms
  ~ of the MIT license.  See the LICENSE file for details.
  ~
  -->

<resources>
    <string name="app_name">masui</string>
    <string name="user_name">Username</string>
    <string name="enter_password">Password</string>
    <string name="login">Login</string>
    <string name="ca_logo">CA Logo</string>
    <string name="social_login_title">Or sign in with:</string>
    <string name="social_login_facebook">Facebook</string>
    <string name="social_login_google">Google</string>
    <string name="social_login_salesforce">Salesforce</string>
    <string name="social_login_linkedin">LinkedIn</string>
    <string name="social_login_enterprise">Enterprise</string>
    <string name="social_login_qr_code">QR Code</string>

    <!-- Validate OTP-->
    <string name="enter_otp">Enter the OTP</string>
    <string name="request_otp">Request OTP</string>
    <string name="verify_otp">Verify</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

    <!-- OTP Error Code Messages -->
    <string name="errorCode140">This page is OTP protected. Please select the channel for OTP delivery.</string>
    <string name="errorCode142">OTP provided is invalid.</string>
    <string name="errorCode143">OTP provided has expired.</string>
    <string name="errorCode144">OTP provided is invalid/expired and max retries have exceeded.</string>
    <string name="errorCode145">New OTP transaction is requested but the user in barred/suspended state.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_delivery_channel">Select OTP Delivery Channel</string>

    <!-- Session Unlock -->
    <string name="fingerprint_sign_in">User Fingerprint Sign-In</string>
    <string name="standard_sign_in">Go to Standard Sign-In</string>
    <string name="request_cancel">Request cancelled.</string>
    <string name="redirect_success">Successfully authenticated.</string>
    <string name="title_success">Success</string>

    <!-- Login Screen Dialogs-->
    <string name="proximity_dialog_title">Proximity Login</string>
    <string name="proximity_dialog_description">Log in with Bluetooth or NFC at any time.</string>
    <string name="qr_code_dialog_description">Scan the QR Code from an authenticated device</string>
    <string name="menu_bluetooth">Login with Bluetooth</string>
    <string name="menu_nfc">Login with NFC</string>

    <!-- Permissions -->
    <string name="enable_ble">Please enable location access to use BLE.</string>

</resources>
